--- a/front/components/viewMenu.html
+++ b/front/components/viewMenu.html
@@ -1,4 +1,13 @@
 
 <div>
-    <div></div>
+    <div>
+        <h1>LOCAL WEB SERVER</h1>
+        <button>Delete</button>
+        <button>Download</button>
+    </div>
+    <div>
+        <h1>Archivos Disponibles</h1>
+        <!--replaceElementPreview-->
+        ACTUALIZAR LOS ELEMENT VIEWS DESDE EL FRONT, NO DESDE EL SERVIDOR --> en viewmenu.js + json lista datos
+    </div>
 </div>
