--- a/front/components/lock.html
+++ b/front/components/lock.html
@@ -1,5 +1,5 @@
 <div id="passwordDiv">
     <p>PASSWORD</p>
     <input id="inputId" type="text">
-    <button id="buttonId">Enviar</button>
+    <button id="buttonId" url="replaceURL">Enviar</button>
 </div>
