--- a/front/components/lock.html
+++ b/front/components/lock.html
@@ -1,5 +1,5 @@
 <div id="passwordDiv">
-    <p>PASSWORD</p>
-    <input id="inputId" type="text">
-    <button id="buttonId" url="replaceURL">Enviar</button>
+    <p class="lockTittle">PASSWORD</p>
+    <input class="lockInput" id="inputId" type="password">
+    <button class="lockButton" id="buttonId" url="replaceURL">Enviar</button>
 </div>
