--- a/front/components/empty.html
+++ b/front/components/empty.html
@@ -4,7 +4,15 @@
   <meta charset="utf-8">
   <title>Local network server</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!--FONT-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+  <!--------------------->
+
   <script type='text/javascript' src='js/empty.js'></script>
+  <link rel='stylesheet' type="text/css" href='css/empty.css'> 
   <!--ReplaceJS-->
   <!--ReplaceCSS-->
 </head>
