--- a/front/components/upload.html
+++ b/front/components/upload.html
@@ -3,8 +3,9 @@
     <p id="uploadTittle">Selecciona un archivo:</p>
     <label class="custom-file-upload">
         <input type="file" id="fileUpload"  accept="*/replaceTypes" multiple>
-        <p>Select a file to upload</p>
+        <p >Select files to upload</p>
     </label>
+    <div id="filesUploaded"></div>
     <button onclick="uploadFile()" id="lockButton">Upload!</button>
 </div>
 
