--- a/front/components/viewMenu.html
+++ b/front/components/viewMenu.html
@@ -1,13 +1,10 @@
 
 <div>
-    <div>
-        <h1>LOCAL WEB SERVER</h1>
-        <button>Delete</button>
-        <button>Download</button>
+    <div id="viewMenuHeader">
+        <p id="viewMenuTittle">LOCAL WEB SERVER</p>
     </div>
-    <div>
-        <h1>Archivos Disponibles</h1>
+    <div id="viewMenuBody">
+        <p>Archivos Disponibles</p>
         <!--replaceElementPreview-->
-        ACTUALIZAR LOS ELEMENT VIEWS DESDE EL FRONT, NO DESDE EL SERVIDOR --> en viewmenu.js + json lista datos
     </div>
 </div>
