--- a/front/css/viewMenu.css
+++ b/front/css/viewMenu.css
@@ -20,6 +20,8 @@
 }
 
 #viewMenuBody{
+    display: flex;
+    flex-direction: row;
     background-color: rgb(71, 71, 71);
     border-radius: 8px;
     border: none;
