--- a/front/components/elementPreview.html
+++ b/front/components/elementPreview.html
@@ -1,6 +1,6 @@
 
 <div id="elementDiv">
-    <p>IMAGE</p>
-    <p>TITLE</p>
-    <button>Ver</button>
+    <img id="elementImg" src="replaceSource"/>
+    <p id="elementTittle">replaceTittle</p>
+    <button id="elementButton" >Ver</button>
 </div>
