--- a/front/css/elementPreview.css
+++ b/front/css/elementPreview.css
@@ -1,10 +1,43 @@
 
 #elementDiv{
-
+    text-align: center;
     margin: auto;
-    margin-top: 4vh;
-    border: 2px solid black;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    border: 2px solid rgb(27, 27, 27);
+    border-radius: 8px;
     width: 18vw;
-    height: 40vh;
+    min-height: 70%;
+    height: auto;
     flex-basis: 20%;
+}
+
+#elementImg{
+    margin: auto;
+    margin-top: 1vh;
+    text-align: center;
+    width: 60%;
+}
+
+#elementTittle{
+    color: rgb(240, 240, 240);
+    font-size: 2vh;
+}
+
+#elementButton{
+    margin: auto;
+    margin-top: 0;
+    margin-bottom: 2vh;
+    width: 45%;
+    height: 10%;
+    border-radius: 16px;
+    font-size: 2vh;
+    background-color: rgb(71, 71, 252);
+    color: rgb(226, 226, 226);
+    border: none;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.25),
+              0 2px 2px rgba(0,0,0,0.20),
+              0 4px 4px rgba(0,0,0,0.15),
+              0 8px 8px rgba(0,0,0,0.10),
+              0 16px 16px rgba(0,0,0,0.05);
 }
