--- a/front/components/elementPreview.html
+++ b/front/components/elementPreview.html
@@ -2,5 +2,5 @@
 <div id="elementDiv">
     <img id="elementImg" src="replaceSource"/>
     <p id="elementTittle">replaceTittle</p>
-    <button id="elementButton" >Ver</button>
+    <button id="elementButton" onclick="next('viewFile',access_pswd)">Ver</button>
 </div>
