--- a/front/css/elementPreview.css
+++ b/front/css/elementPreview.css
@@ -16,8 +16,8 @@
     margin: auto;
     margin-top: 1vh;
     text-align: center;
-    width: 60%;
-    height: 60%;
+    width: 80%;
+    height: 65%;
     border-radius: 8px;
 }
 
@@ -42,4 +42,15 @@
               0 4px 4px rgba(0,0,0,0.15),
               0 8px 8px rgba(0,0,0,0.10),
               0 16px 16px rgba(0,0,0,0.05);
+}
+
+#elementButton:hover{
+    background-color: rgb(50, 50, 255);
+    color: rgb(253, 253, 253);
+    border: none;
+    box-shadow: 0 2px 2px rgba(0,0,0,0.5),
+              0 4px 4px rgba(0,0,0,0.4),
+              0 8px 8px rgba(0,0,0,0.3),
+              0 16px 16px rgba(0,0,0,0.20),
+              0 32px 32px rgba(0,0,0,0.1);
 }
