--- a/front/css/upload.css
+++ b/front/css/upload.css
@@ -54,11 +54,28 @@
     background-color: rgb(71, 71, 252);
     color: rgb(226, 226, 226);
     border: none;
+    transition: background-color 0.3s ease, color 0.3s ease , box-shadow 0.3s ease ;
     box-shadow: 0 1px 1px rgba(0,0,0,0.25),
               0 2px 2px rgba(0,0,0,0.20),
               0 4px 4px rgba(0,0,0,0.15),
               0 8px 8px rgba(0,0,0,0.10),
               0 16px 16px rgba(0,0,0,0.05);
+}
+
+#lockButton:hover{
+    background-color: rgb(50, 50, 255);
+    color: rgb(253, 253, 253);
+    box-shadow: 0 2px 2px rgba(0,0,0,0.5),
+              0 4px 4px rgba(0,0,0,0.4),
+              0 8px 8px rgba(0,0,0,0.3),
+              0 16px 16px rgba(0,0,0,0.20),
+              0 32px 32px rgba(0,0,0,0.1);
+}
+
+#lockButton:active{
+    background-color: rgb(71, 71, 252);
+    color: rgb(226, 226, 226);
+    box-shadow: none;
 }
 
 #filesUploaded{
